--- a/app/src/main/res/anim/pulsing_circle.xml
+++ b/app/src/main/res/anim/pulsing_circle.xml
@@ -2,22 +2,15 @@
 <set xmlns:android="http://schemas.android.com/apk/res/android"
     android:fillAfter="true">
     <scale
-        android:duration="1500"
-        android:fromXScale="0.1"
-        android:fromYScale="0.1"
+        android:duration="500"
+        android:fromXScale="0.7"
+        android:fromYScale="0.7"
         android:interpolator="@android:anim/accelerate_decelerate_interpolator"
         android:toXScale="1"
         android:toYScale="1"
         android:pivotX="50%"
         android:pivotY="50%"
-        android:repeatMode="restart"
+        android:repeatMode="reverse"
         android:fillAfter="true"
         android:repeatCount="infinite"/>
-    <alpha
-        android:duration="1500"
-        android:fromAlpha="1"
-        android:toAlpha="0"
-        android:repeatMode="restart"
-        android:fillAfter="true"
-        android:repeatCount="infinite" />
 </set>
