--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -50,24 +50,32 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1">
                 <ImageView
-                    android:id="@+id/pulsing_circle2"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
+                    android:id="@+id/pulsing_circle_outer"
+                    android:layout_width="52dp"
+                    android:layout_height="52dp"
                     android:src="@drawable/shape_circle"
-                    android:tint="@color/accent75"
-                    android:alpha="0.8"
+                    android:tint="?attr/multi_select_background_color"
                     android:contentDescription="@null"
                     android:layout_gravity="center"
                     />
                 <ImageView
-                    android:id="@+id/pulsing_circle1"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
+                    android:id="@+id/pulsing_circle_inner"
+                    android:layout_width="36dp"
+                    android:layout_height="36dp"
                     android:src="@drawable/shape_circle"
-                    android:tint="@color/accent90"
+                    android:tint="?attr/color_group_52"
+                    android:alpha="0.5"
                     android:contentDescription="@null"
                     android:layout_gravity="center"
                     />
+                <ImageView
+                    android:id="@+id/pulsing_base_icon"
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
+                    android:src="@drawable/ic_explore_black_24dp"
+                    android:tint="?attr/material_theme_primary_color"
+                    android:contentDescription="@null"
+                    android:layout_gravity="center"/>
             </FrameLayout>
         </LinearLayout>
 
