--- a/app/src/main/res/layout/fragment_suggested_edits_tasks.xml
+++ b/app/src/main/res/layout/fragment_suggested_edits_tasks.xml
@@ -117,9 +117,10 @@
                         android:layout_height="match_parent"
                         android:contentDescription="@null"
                         android:visibility="gone"
-                        app:layout_constraintBottom_toBottomOf="parent"
+                        android:layout_marginTop="16dp"
                         app:layout_constraintTop_toTopOf="parent"
                         app:srcCompat="@drawable/ic_suggested_edits_onboarding" />
+
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
                 <View
