--- a/app/src/main/res/layout/fragment_suggested_edits_tasks.xml
+++ b/app/src/main/res/layout/fragment_suggested_edits_tasks.xml
@@ -18,6 +18,16 @@
             android:layout_height="wrap_content"
             android:focusableInTouchMode="true">
 
+            <ProgressBar
+                android:id="@+id/progressBar"
+                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:indeterminate="true"
+                android:indeterminateTint="?attr/colorAccent"
+                android:progressBackgroundTint="?attr/multi_select_background_color"
+                android:layout_marginTop="-6dp" />
+
             <org.wikipedia.views.SuggestedEditsDisabledStatesView
                 android:id="@+id/disabledStatesView"
                 android:layout_width="match_parent"
@@ -43,6 +53,8 @@
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:clipChildren="false"
+                    android:clipToPadding="false"
                     android:layout_marginBottom="@dimen/suggested_edits_stats_bottom_margin"
                     android:paddingStart="@dimen/suggested_edits_screen_margin"
                     android:paddingEnd="@dimen/suggested_edits_screen_margin">
@@ -80,16 +92,18 @@
                         app:layout_constraintTop_toTopOf="@id/pageViewStatsView" />
 
                     <LinearLayout
-                        android:id="@+id/tooltipLayout"
+                        android:id="@+id/toolTipFirstRow"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="vertical"
                         android:visibility="gone"
-                        app:layout_constraintBottom_toBottomOf="parent"
+                        android:clipChildren="false"
+                        android:clipToPadding="false"
+                        android:paddingBottom="8dp"
                         app:layout_constraintTop_toBottomOf="@id/contributionsStatsView">
 
                         <View
-                            android:id="@+id/topTooltipArrow"
+                            android:id="@+id/toolTipArrowFirstRow"
                             android:layout_width="30dp"
                             android:layout_height="15dp"
                             android:layout_gravity="end"
@@ -99,15 +113,45 @@
                             android:elevation="4dp" />
 
                         <TextView
-                            android:id="@+id/tooltipTextView"
+                            android:id="@+id/toolTipTextFirstRow"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:background="?attr/paper_color"
                             android:elevation="4dp"
-                            android:fontFamily="sans-serif"
                             android:lineSpacingExtra="6sp"
-                            android:padding="16dp"
-                            android:textAlignment="center"
+                            android:padding="8dp"
+                            android:textSize="@dimen/suggested_edits_message_textview_text_size" />
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:id="@+id/toolTipSecondRow"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical"
+                        android:visibility="gone"
+                        android:clipChildren="false"
+                        android:clipToPadding="false"
+                        android:paddingBottom="8dp"
+                        app:layout_constraintTop_toBottomOf="@id/pageViewStatsView">
+
+                        <View
+                            android:id="@+id/toolTipArrowSecondRow"
+                            android:layout_width="30dp"
+                            android:layout_height="15dp"
+                            android:layout_gravity="end"
+                            android:layout_marginStart="@dimen/suggested_edits_top_tooltip_margin"
+                            android:layout_marginEnd="@dimen/suggested_edits_top_tooltip_margin"
+                            android:background="@drawable/triangle"
+                            android:elevation="4dp" />
+
+                        <TextView
+                            android:id="@+id/toolTipTextSecondRow"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:background="?attr/paper_color"
+                            android:elevation="4dp"
+                            android:lineSpacingExtra="6sp"
+                            android:padding="8dp"
                             android:textSize="@dimen/suggested_edits_message_textview_text_size" />
                     </LinearLayout>
 
@@ -122,17 +166,6 @@
                         app:srcCompat="@drawable/ic_suggested_edits_onboarding" />
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
-
-                <View
-                    android:id="@+id/bottomTooltipArrow"
-                    android:layout_width="30dp"
-                    android:layout_height="15dp"
-                    android:layout_gravity="end"
-                    android:layout_marginStart="@dimen/suggested_edits_bottom_tooltip_margin"
-                    android:layout_marginEnd="@dimen/suggested_edits_bottom_tooltip_margin"
-                    android:background="@drawable/triangle"
-                    android:elevation="4dp"
-                    android:visibility="gone" />
 
                 <TextView
                     android:id="@+id/textViewForMessage"
