--- a/app/src/main/res/layout-land/fragment_random.xml
+++ b/app/src/main/res/layout-land/fragment_random.xml
@@ -51,7 +51,7 @@
                 app:borderWidth="0dp"
                 app:elevation="4dp"
                 app:srcCompat="@drawable/animated_dice"
-                android:tint="?attr/randomizer_dice_icon_color"/>
+                app:tint="?attr/randomizer_dice_icon_color"/>
 
             <ImageView
                 android:id="@+id/random_save_button"
