--- a/app/src/main/res/layout/fragment_random.xml
+++ b/app/src/main/res/layout/fragment_random.xml
@@ -48,7 +48,7 @@
                 android:layout_marginEnd="32dp"
                 android:layout_marginBottom="8dp"
                 android:contentDescription="@string/view_next_random_article"
-                android:tint="?attr/randomizer_dice_icon_color"
+                app:tint="?attr/randomizer_dice_icon_color"
                 app:backgroundTint="?attr/themed_icon_color"
                 app:borderWidth="0dp"
                 app:elevation="4dp"
