--- a/app/src/main/res/values/preference_keys.xml
+++ b/app/src/main/res/values/preference_keys.xml
@@ -119,4 +119,5 @@
     <string name="preference_key_image_tags_onboarding_shown">imageTagsOnboardingShown</string>
     <string name="preference_key_install_referrer_attempts">installReferrerAttempts</string>
     <string name="preference_key_temporary_wikitext_storage">temporaryWikitextStorage</string>
+    <string name="preference_key_suggested_edits_reward_interstitial_enabled">suggestedEditsRewardInterstitialEnabled</string>
 </resources>
