--- a/app/src/main/res/layout/fragment_suggested_edits_rewards_item.xml
+++ b/app/src/main/res/layout/fragment_suggested_edits_rewards_item.xml
@@ -8,6 +8,25 @@
     android:orientation="vertical"
     android:gravity="center">
 
+    <ProgressBar
+        android:id="@+id/cardItemProgressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="64dp"
+        android:layout_marginBottom="64dp" />
+
+    <org.wikipedia.views.WikiErrorView
+        android:id="@+id/cardItemErrorView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="48dp"
+        android:layout_marginBottom="48dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:visibility="gone" />
+
     <ImageView
         android:id="@+id/rewardImage"
         android:layout_width="wrap_content"
