--- a/app/src/main/res/drawable/ic_illustration_quality_excellent.xml
+++ b/app/src/main/res/drawable/ic_illustration_quality_excellent.xml
@@ -17,13 +17,9 @@
       android:fillColor="#D5FDF4"
       android:fillType="evenOdd"/>
   <path
-      android:pathData="M156,34.75C139.846,34.75 126.75,47.846 126.75,64S139.846,93.25 156,93.25 185.25,80.154 185.25,64 172.154,34.75 156,34.75z"
-      android:strokeLineJoin="round"
-      android:strokeWidth="4.5"
-      android:fillColor="#00000000"
-      android:strokeColor="#00AF89"
-      android:fillType="evenOdd"
-      android:strokeLineCap="round"/>
+      android:pathData="M155.738,32.496c1.242,-0.01 2.257,0.99 2.266,2.233 0.01,1.243 -0.99,2.258 -2.233,2.267 -4.625,0.034 -9.173,1.255 -13.271,3.621 -12.914,7.456 -17.339,23.97 -9.883,36.883 7.456,12.914 23.97,17.339 36.883,9.883 12.914,-7.456 17.339,-23.97 9.883,-36.883 -0.622,-1.076 -0.253,-2.452 0.823,-3.074 1.076,-0.62 2.452,-0.252 3.074,0.824 8.698,15.066 3.536,34.331 -11.53,43.03 -15.066,8.698 -34.331,3.536 -43.03,-11.53 -8.698,-15.066 -3.536,-34.331 11.53,-43.03 4.777,-2.758 10.09,-4.184 15.488,-4.224z"
+      android:fillColor="#00AF89"
+      android:fillType="nonZero"/>
   <path
       android:pathData="M132.375,40.375L179.625,40.375L179.625,87.625L132.375,87.625z"
       android:fillColor="#FFF"
