--- a/app/src/main/res/drawable/rounded_12dp_accent90_fill.xml
+++ b/app/src/main/res/drawable/rounded_12dp_accent90_fill.xml
@@ -2,5 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <corners android:radius="12dp" />
-    <solid android:color="@color/accent90" />
+    <solid android:color="?attr/multi_select_background_color" />
+    <stroke android:width="1dp" android:color="?attr/colorAccent"/>
 </shape>
