--- a/app/src/main/res/layout/item_suggested_edits_contributions.xml
+++ b/app/src/main/res/layout/item_suggested_edits_contributions.xml
@@ -1,19 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="?attr/selectableItemBackground"
-    android:orientation="vertical"
+    android:orientation="horizontal"
+    android:paddingStart="16dp"
     android:paddingTop="16dp">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        <FrameLayout
+            android:layout_width="16dp"
+            android:layout_height="match_parent">
+
+            <View
+                android:layout_width="1dp"
+                android:layout_height="match_parent"
+                android:layout_gravity="center_horizontal"
+                android:background="?attr/color_group_60" />
+
+            <ImageView
+                android:id="@+id/contributionIcon"
+                android:layout_width="match_parent"
+                android:layout_height="16dp"
+                android:contentDescription="@null"
+                android:tint="?attr/colorAccent"
+                app:srcCompat="@drawable/ic_article_description" />
+        </FrameLayout>
 
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="24dp"
             android:layout_weight="1"
             android:orientation="vertical">
 
@@ -21,7 +40,6 @@
                 android:id="@+id/title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
                 android:ellipsize="end"
                 android:maxLines="2"
                 android:textColor="?attr/material_theme_primary_color"
@@ -33,11 +51,35 @@
                 style="@style/MaterialListTitle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
                 android:ellipsize="end"
                 android:maxLines="2"
                 android:paddingEnd="8dp"
                 tools:text="Lorem ipsum" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="4dp"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:layout_width="16dp"
+                    android:layout_height="16dp"
+                    android:contentDescription="@null"
+                    android:tint="?attr/action_mode_green_background"
+                    app:srcCompat="@drawable/ic_trending_up_black_24dp" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="4dp"
+                    android:lineSpacingExtra="4sp"
+                    android:text="555"
+                    android:textColor="?attr/action_mode_green_background"
+                    android:textSize="12sp"
+                    android:textStyle="bold"
+                    tools:text="1,837" />
+            </LinearLayout>
         </LinearLayout>
 
         <ImageView
@@ -48,14 +90,4 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="@dimen/list_item_horizontal_padding"
             android:contentDescription="@null" />
-    </LinearLayout>
-
-    <TextView
-        android:id="@+id/editType"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:textColor="?attr/material_theme_secondary_color"
-        android:textSize="16sp"
-        tools:text="Lorem ipsum" />
 </LinearLayout>
