--- a/app/src/main/res/drawable/ic_article_description.xml
+++ b/app/src/main/res/drawable/ic_article_description.xml
@@ -7,6 +7,6 @@
     <clip-path android:pathData="M17,2a2,2 0,0 1,2 2v16a2,2 0,0 1,-2 2L7,22a2,2 0,0 1,-2 -2L5,4a2,2 0,0 1,2 -2h10zM14,13L8,13a1,1 0,0 0,0 2h6a1,1 0,0 0,0 -2zM16,9L8,9a1,1 0,0 0,-0.117 1.993L8,11h8a1,1 0,0 0,0 -2z M 0,0"/>
     <path
         android:pathData="M0,0h24v24L0,24z"
-        android:fillColor="@color/base100"/>
+        android:fillColor="#36C"/>
   </group>
 </vector>
