--- a/app/src/main/res/layout/view_suggested_edits_task_item.xml
+++ b/app/src/main/res/layout/view_suggested_edits_task_item.xml
@@ -1,76 +1,87 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<merge xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="?attr/selectableItemBackground"
-    android:paddingStart="16dp"
-    android:paddingEnd="16dp">
+    tools:layout_height="wrap_content"
+    tools:parentTag="androidx.constraintlayout.widget.ConstraintLayout">
+
+    <ImageView
+        android:id="@+id/taskIconCircle"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginTop="20dp"
+        app:srcCompat="@drawable/shape_circle"
+        app:tint="?attr/color_group_53"
+        android:contentDescription="@null"/>
 
     <ImageView
         android:id="@+id/taskIcon"
         android:layout_width="24dp"
         android:layout_height="24dp"
+        app:layout_constraintTop_toTopOf="@id/taskIconCircle"
+        app:layout_constraintStart_toStartOf="@id/taskIconCircle"
+        android:layout_marginStart="12dp"
         android:layout_marginTop="12dp"
-        android:alpha="0.7"
-        android:contentDescription="@null"
         android:tint="?attr/themed_icon_color"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:src="@drawable/ic_article_description" />
+        android:alpha="0.7"
+        tools:src="@drawable/ic_article_description"
+        android:contentDescription="@null"/>
 
     <TextView
         android:id="@+id/taskTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
+        app:layout_constraintStart_toEndOf="@+id/taskIconCircle"
+        app:layout_constraintTop_toTopOf="@+id/taskIconCircle"
+        android:layout_marginStart="16dp"
+        android:textSize="@dimen/suggested_edits_message_textview_text_size"
         android:textColor="?attr/material_theme_primary_color"
-        android:textSize="16sp"
         android:textStyle="bold"
-        app:layout_constraintStart_toEndOf="@+id/taskIcon"
-        app:layout_constraintTop_toTopOf="@+id/taskIcon"
-        tools:text="Lorem ipsum" />
+        android:textAllCaps="true"
+        android:letterSpacing="0.05"
+        android:lineSpacingExtra="6sp"
+        tools:text="Lorem ipsum"/>
 
     <TextView
         android:id="@+id/taskTitleNewLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="@+id/taskTitle"
         android:layout_marginStart="4dp"
-        android:text="@string/suggested_edits_task_new"
+        android:textSize="@dimen/suggested_edits_message_textview_text_size"
         android:textColor="@color/green50"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="@+id/taskTitle"
-        app:layout_constraintEnd_toEndOf="parent" />
+        android:text="@string/suggested_edits_task_new"/>
 
     <TextView
         android:id="@+id/taskDescription"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
-        android:lineSpacingExtra="6sp"
-        android:textColor="?attr/material_theme_de_emphasised_color"
-        android:textSize="@dimen/suggested_edits_message_textview_text_size"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/taskTitle"
         app:layout_constraintTop_toBottomOf="@+id/taskTitle"
-        tools:text="Lorem ipsum" />
+        app:layout_constraintEnd_toEndOf="parent"
+        android:textSize="@dimen/suggested_edits_message_textview_text_size"
+        android:lineSpacingExtra="6sp"
+        android:textColor="?attr/material_theme_secondary_color"
+        tools:text="Lorem ipsum"/>
 
     <LinearLayout
         android:id="@+id/addContainer"
         android:layout_width="wrap_content"
-        android:layout_height="32dp"
-        android:layout_marginStart="12dp"
-        android:layout_marginTop="12dp"
-        android:layout_marginBottom="12dp"
-        android:background="@drawable/button_shape_wide_corners"
+        android:layout_height="48dp"
+        android:padding="4dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginBottom="8dp"
         android:clickable="true"
         android:focusable="true"
-        android:paddingStart="8dp"
-        android:paddingEnd="8dp"
+        app:layout_constraintTop_toBottomOf="@id/taskDescription"
+        app:layout_constraintStart_toEndOf="@id/taskIconCircle"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@id/taskIcon"
-        app:layout_constraintTop_toBottomOf="@id/taskDescription">
+        android:background="?attr/selectableItemBackgroundBorderless">
 
         <ImageView
             android:id="@+id/add_image"
@@ -86,31 +97,30 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:layout_marginStart="4dp"
-            android:layout_marginEnd="4dp"
             android:fontFamily="sans-serif-medium"
-            android:letterSpacing="0.05"
             android:text="@string/suggested_edits_task_action_text_add"
             android:textAllCaps="true"
-            android:textColor="?attr/colorAccent" />
+            android:textColor="?attr/colorAccent"
+            android:letterSpacing="0.05"
+            android:textSize="@dimen/suggested_edits_message_textview_text_size" />
     </LinearLayout>
 
     <LinearLayout
         android:id="@+id/translateContainer"
         android:layout_width="wrap_content"
-        android:layout_height="32dp"
-        android:layout_marginStart="16dp"
-        android:background="@drawable/button_shape_wide_corners"
+        android:layout_height="48dp"
+        android:padding="4dp"
         android:clickable="true"
         android:focusable="true"
-        android:paddingStart="8dp"
-        android:paddingEnd="8dp"
+        android:layout_marginStart="16dp"
+        app:layout_constraintTop_toTopOf="@id/addContainer"
         app:layout_constraintStart_toEndOf="@id/addContainer"
-        app:layout_constraintTop_toTopOf="@id/addContainer">
+        android:background="?attr/selectableItemBackgroundBorderless">
 
         <ImageView
             android:id="@+id/suggestedEditsTranslateImage"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
             android:layout_gravity="center_vertical"
             android:contentDescription="@null"
             app:srcCompat="@drawable/ic_translate_white_24dp"
@@ -121,13 +131,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:layout_marginStart="6dp"
-            android:layout_marginEnd="4dp"
+            android:layout_marginStart="4dp"
             android:fontFamily="sans-serif-medium"
-            android:letterSpacing="0.05"
             android:text="@string/suggested_edits_task_action_text_translate"
             android:textAllCaps="true"
-            android:textColor="?attr/colorAccent" />
+            android:textColor="?attr/colorAccent"
+            android:letterSpacing="0.05"
+            android:textSize="@dimen/suggested_edits_message_textview_text_size" />
     </LinearLayout>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</merge>
